# async-graphql-dataloader-sample

./: .env  Cargo.toml  README.md
.cargo/: config.toml
entity/: Cargo.toml
entity/src/: item.rs  lib.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240717_000001_create_item.rs  m20240810_042511_insert_new_data.rs
src/: main.rs
src/graphql/: resolver.rs  schema.rs
src/graphql/resolver/: item.rs  query.rs  user.rs
