[package]
name = "async-graphql-dataloader-sample"
version = "0.1.0"
edition = "2021"
default-run = "serve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dataloader = { version = "0.17.0", features = ["tokio"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print"
] }
sea-orm-migration = "0.12.15"
entity = { path = "./entity" }
futures = "0.3.30"
chrono = "0.4.38"
chrono-tz = "0.9.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-web = "4.8.0"
async-graphql = { version = "7.0.7", features = ["dataloader"] }
async-graphql-actix-web = "7.0.7"
tokio = "1.39.2"

[[bin]]
name = "serve"
path = "src/main.rs"
